[metadata]
name = glaciationBCs
version = 1.1.2
author = Christian B. Silbermann
author_email = christian.silbermann@ifgt.tu-freiberg.de
description = Python package for capturing glacial cycles via boundary conditions for hydro-geological simulations with OpenGeoSys
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cbsilver/glaciationBCs
project_urls =
    Bug Tracker = https://github.com/cbsilver/glaciationBCs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
	#copy
	numpy
	pandas
	#functools
	#importlib
	matplotlib

[options.packages.find]
where = src
